--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -166,4 +166,8 @@
     <!-- Immersive gestures -->
     <string name="immersive_gestures_title">Immersive gestures</string>
     <string name="immersive_gestures_summary">Remove navigation bar height while keeping the gesture pill</string>
+
+    <!-- Pocket judge -->
+    <string name="pocket_judge_title">Pocket detection</string>
+    <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
 </resources>
