--- a/res/values/neoteric_strings.xml
+++ b/res/values/neoteric_strings.xml
@@ -436,4 +436,7 @@
     
     <!-- System Update -->
     <string name="system_update_title">System update</string>
+
+    <!-- Warning message displayed if user choses not to validate the EAP server -->
+    <string name="wifi_do_not_validate_eap_server_warning">No certificate specified. Your connection will not be private.</string>
 </resources>
