Settings: Add system update entry
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/res/values/zephyrus_strings.xml
+++ b/res/values/zephyrus_strings.xml
@@ -16,5 +16,8 @@
     <!-- Small landscape notifications -->
     <string name="small_landscape_notification_title">Small landscape notifications</string>
     <string name="small_landscape_notification_summary">Shows notifications smaller in width in notification panel in landscape mode just as AOSP intended</string>
+    
+    <!-- System Update -->
+    <string name="system_update_title">System update</string>
 
 </resources>
