Settings: Add Game Space support
Co-authored-by: alanndz <alanndz7@gmail.com>
Change-Id: I5df5d4cbd6a12f464b7768e73e7606bf378e7b3c

--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -188,4 +188,8 @@
     <!-- QS footer data usage -->
     <string name="qs_show_data_usage_title">Show data usage</string>
     <string name="qs_show_data_usage_summary">Show daily cellular/Wi-Fi data usage in QS footer</string>
+
+     <!-- Game Space -->
+    <string name="game_space_title">Game Space</string>
+    <string name="game_space_summary">Enhance your gaming experience</string>
 </resources>
