--- a/res/values/zeph_arrays.xml
+++ b/res/values/zeph_arrays.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright 2016-2022 Project Zephyrus
-
+<!-- Copyright 2023 Project Zephyrus
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -60,4 +57,17 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+
+    <!-- Network traffic -->
+    <string-array name="network_traffic_mode_entries" translatable="false">
+        <item>@string/network_traffic_dynamic</item>
+        <item>@string/network_traffic_download</item>
+        <item>@string/network_traffic_upload</item>
+    </string-array>
+    <string-array name="network_traffic_mode_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
+
