--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -36,6 +36,19 @@
             android:title="@string/auto_brightness_title"
             android:fragment="com.android.settings.display.AutoBrightnessSettings"
             settings:controller="com.android.settings.display.AutoBrightnessPreferenceController"/>
+
+        <org.zeph.support.preference.SystemSettingSwitchPreference
+            android:key="status_bar_brightness_control"
+            android:title="@string/statusbar_brightness_control_title"
+            android:summary="@string/statusbar_brightness_control_summary"
+            android:defaultValue="false" />
+
+        <org.zeph.support.preference.SystemSettingSwitchPreference
+            android:key="status_bar_brightness_control_no_landscape"
+            android:summary="@string/disable_in_landscape_summary"
+            android:title="@string/disable_in_landscape_title"
+            settings:controller="com.android.settings.display.GesturesDisableInLandscapePreferenceController" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
