Settings: add edge light customizations [2/2]
[cjh1249131356]: Rewrite to use color picker from custom-preferences

Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>

--- a/res/xml/configure_notification_settings.xml
+++ b/res/xml/configure_notification_settings.xml
@@ -143,6 +143,14 @@
            android:summary="@string/small_landscape_notification_summary"
            android:defaultValue="true" />
 
+        <com.android.settingslib.PrimarySwitchPreference
+            android:key="edge_light_enabled"
+            android:title="@string/edge_light_title"
+            android:summary="@string/edge_light_intro_text"
+            android:fragment="com.android.settings.display.EdgeLightSettings"
+            android:defaultValue="false"
+            settings:controller="com.android.settings.display.EdgeLightPreferenceController" />
+
         <SwitchPreference
              android:key="silent_icons"
              android:order="20"
