Settings: brightness slider customisations [2/2]
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -49,6 +49,18 @@
             android:title="@string/disable_in_landscape_title"
             settings:controller="com.android.settings.display.GesturesDisableInLandscapePreferenceController" />
 
+	<org.zeph.support.preference.SystemSettingListPreference
+            android:key="qs_show_brightness"
+            android:title="@string/qs_show_brightness_title"
+            android:entries="@array/qs_show_brightness_entries"
+            android:entryValues="@array/qs_show_brightness_values"
+            android:defaultValue="1" />
+
+        <org.zeph.support.preference.SystemSettingSwitchPreference
+            android:key="qs_brightness_position_bottom"
+            android:title="@string/qs_brightness_position_position_title"
+            android:summary="@string/qs_brightness_position_position_summary" 
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
