--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -252,6 +252,13 @@
         <SwitchPreference
           android:key="call_connected_tones"
           android:title="@string/call_connected_tones_title" />
+          
+    <org.zeph.support.preference.GlobalSettingSwitchPreference
+        android:key="ringer_mute_speaker_media"
+        android:title="@string/ringer_mute_speaker_media_title"
+        android:summary="@string/ringer_mute_speaker_media_summary"
+        android:defaultValue="false"
+        android:order="-4"/>
 
 
     <Preference
