--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -153,4 +153,8 @@
     <!-- 4g icon -->
     <string name="show_fourg_icon_title">Use 4G icon</string>
     <string name="show_fourg_icon_summary">Force to display 4G in signal icon</string>
+
+    <!-- Show old style mobile data icon -->
+    <string name="use_old_mobiletype_title">Use old style mobile data icon</string>
+    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
 </resources>
