--- a/res/xml/network_provider_internet.xml
+++ b/res/xml/network_provider_internet.xml
@@ -138,13 +138,20 @@
             android:summary="@string/show_fourg_icon_summary"
             android:order="30"
             android:defaultValue="false" />
+            
+      <org.zeph.support.preference.SystemSettingSwitchPreference
+            android:key="use_old_mobiletype"
+            android:title="@string/use_old_mobiletype_title"
+            android:summary="@string/use_old_mobiletype_summary"
+            android:order="35"
+            android:defaultValue="false" />
      
      <com.android.settingslib.PrimarySwitchPreference
             android:key="network_traffic_state"
             android:fragment="com.android.settings.display.NetworkTraffic"
             android:title="@string/network_traffic_state_title"
             android:summary="@string/network_traffic_state_summary"
-            android:order="35"
+            android:order="40"
 	    android:defaultValue="false"
             settings:controller="com.android.settings.display.NetworkTrafficPreferenceController" />
 
