[SQUASH] Settings: Add pulse options [2/2]
Squash of all commits for the pulse visualizer (as of 19.03.2023)

Co-Authored-By: TikkiTikki <radstylemusic@gmail.com>
Co-Authored-By: spezi77 <spezi7713@gmx.net>
Co-Authored-By: Pranav Vashi <neobuddy89@gmail.com>
Co-Authored-By: DarkJoker360 <simoespo159@gmail.com>

--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -260,6 +260,13 @@
         android:defaultValue="false"
         android:order="-4"/>
 
+    <!-- Pulse Visualizer -->
+    <Preference
+        android:key="pulse"
+        android:title="@string/pulse_settings" 
+        android:summary="@string/pulse_settings_summary" 
+        android:fragment="com.android.settings.sound.PulseSettings" 
+        android:order="-3"/>
 
     <Preference
         android:key="sound_work_settings"
