Settings: Add support for Lockscreen clock fonts [2/3]
After r16, a commit to cleanup the KeyguardClockSwtich and unify it's structure was merged.
Also, this added a new resource into the frameworks core, which allows us to overlay the custom clock font.
So, we need to overlays now to customize this. This makes me really happy because it removes the ugly method that we were doing years ago.

--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -311,4 +311,10 @@
     <string name="clock_use_single_line_title">Custom clock format</string>
     <string name="single_line">Single-line</string>
     <string name="double_line">Double-line</string>
+
+    <!-- Fonts -->
+    <string name="clock_format">12\n26</string>
+    <string name="text_sample">AaBbCc</string>
+    <string name="theme_customization_lock_clock_title">Clock font style</string>
+    <string name="theme_customization_lock_clock_summary">Set lockscreen clock font style</string>
 </resources>
