--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -390,4 +390,8 @@
     <string name="qs_show_brightness_both">Show in QS &amp; Quick QS Panel</string>
     <string name="qs_brightness_position_position_title">Move to bottom</string>
     <string name="qs_brightness_position_position_summary">Show brightness slider in the bottom of QS panel</string>
+
+    <!-- Partial Screenshot -->
+    <string name="click_partial_screenshot_title">Click to partial screenshot</string>
+    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
 </resources>
