--- a/res/xml/gestures.xml
+++ b/res/xml/gestures.xml
@@ -107,6 +107,12 @@
         android:fragment="com.android.settings.gestures.SwipeToScreenshotGestureSettings"
         settings:controller="com.android.settings.gestures.SwipeToScreenshotPreferenceController" />
 
+    <org.zeph.support.preference.SystemSettingSwitchPreference
+        android:key="click_partial_screenshot"
+        android:title="@string/click_partial_screenshot_title"
+        android:summary="@string/click_partial_screenshot_summary"
+        android:defaultValue="false" />
+
     <Preference
         android:key="volume_button_music_control_sumary"
         android:title="@string/volume_button_music_control_title"
