--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -189,6 +189,13 @@
             android:summary="@string/doze_summary"
             android:defaultValue="true" />
 
+        <ListPreference
+            android:key="ambient_notif_timeout"
+            android:title="@string/ambient_time_out_title"
+            android:entries="@array/heads_up_time_out_entries"
+            android:entryValues="@array/heads_up_time_out_values"
+            android:persistent="false" />
+
     </PreferenceCategory>
 
     <!-- Work profile settings are at the bottom with high order value to avoid users thinking that
