--- a/res/xml/gesture_navigation_settings.xml
+++ b/res/xml/gesture_navigation_settings.xml
@@ -35,6 +35,12 @@
         android:summary="@string/immersive_gestures_summary"
         android:defaultValue="false" />
 
+    <org.zeph.support.preference.SystemSettingSwitchPreference
+        android:key="navigation_bar_ime_space"
+        android:title="@string/navigation_bar_ime_space_title"
+        android:summary="@string/navigation_bar_ime_space_summary"
+        android:defaultValue="false" />
+    
     <PreferenceCategory
         android:key="assistant_gesture_category"
         android:persistent="false"
