--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -99,6 +99,15 @@
             android:summary="%s"
             android:defaultValue="0" />
 
+        <org.zeph.support.preference.SecureSettingSeekBarPreference
+            android:key="kg_custom_clock_top_margin"
+            android:title="@string/kg_custom_clock_top_margin_title"
+            android:max="500"
+            android:min="80"
+            settings:interval="1"
+            android:defaultValue="120"
+            settings:units="dp" />
+
         <Preference
             android:key="android.theme.customization.lockscreen_clock_font"
             android:title="@string/theme_customization_lock_clock_title"
