--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -309,6 +309,8 @@
     <string name="single_line">Single-line</string>
     <string name="double_line">Double-line</string>
     <string name="kg_custom_clock_top_margin_title">Lockscreen large clock bottom spacing</string>
+    <string name="kg_large_clock_text_size_title">Lockscreen large clock size</string>
+    <string name="kg_small_clock_text_size_title">Lockscreen small clock size</string>    
 
     <!-- Fonts -->
     <string name="clock_format">12\n26</string>
