--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -108,6 +108,24 @@
             android:defaultValue="120"
             settings:units="dp" />
 
+        <org.zeph.support.preference.SecureSettingSeekBarPreference
+            android:key="kg_large_clock_text_size"
+            android:title="@string/kg_large_clock_text_size_title"
+            android:max="350"
+            settings:min="25"
+            settings:interval="1"
+            android:defaultValue="180"
+            settings:units="dp" />
+
+        <org.zeph.support.preference.SecureSettingSeekBarPreference
+            android:key="kg_small_clock_text_size"
+            android:title="@string/kg_small_clock_text_size_title"
+            android:max="100"
+            settings:min="25"
+            settings:interval="1"
+            android:defaultValue="86"
+            settings:units="dp" />
+
         <Preference
             android:key="android.theme.customization.lockscreen_clock_font"
             android:title="@string/theme_customization_lock_clock_title"
