--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -320,4 +320,8 @@
 
     <!-- Ambient timeout -->
     <string name="ambient_time_out_title">Ambient notification time out</string>
+
+    <!-- Data disabled icon -->
+    <string name="data_disabled_icon_title">Data disabled icon</string>
+    <string name="data_disabled_icon_summary">Display the cross sign next to signal bar when data is disabled</string>
 </resources>
