--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -259,6 +259,20 @@
         android:summary="@string/ringer_mute_speaker_media_summary"
         android:defaultValue="false"
         android:order="-4"/>
+        
+    <org.zeph.support.preference.SystemSettingSwitchPreference
+        android:key="block_alert"
+        android:title="@string/block_alert_title"
+        android:summary="@string/block_alert_summary"
+        android:defaultValue="false"
+        android:order="-3"/>
+        
+    <org.zeph.support.preference.SystemSettingSwitchPreference
+        android:key="alert_slider_pulse"
+        android:title="@string/alert_slider_pulse_title"
+        android:summary="@string/alert_slider_pulse_summary"
+        android:defaultValue="false"
+        android:order="-2"/>
 
     <!-- Pulse Visualizer -->
     <Preference
@@ -266,7 +280,7 @@
         android:title="@string/pulse_settings" 
         android:summary="@string/pulse_settings_summary" 
         android:fragment="com.android.settings.sound.PulseSettings" 
-        android:order="-3"/>
+        android:order="-1"/>
 
     <Preference
         android:key="sound_work_settings"
