--- a/res/values/zeph_arrays.xml
+++ b/res/values/zeph_arrays.xml
@@ -258,5 +258,16 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+    <!-- Three finger swipe screenshot behavior -->
+    <string-array name="three_finger_entries" translatable="false">
+        <item>@string/three_finger_full</item>
+        <item>@string/three_finger_partial</item>
+    </string-array>
+
+    <string-array name="three_finger_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 </resources>
 
