--- a/res/xml/connected_devices.xml
+++ b/res/xml/connected_devices.xml
@@ -52,6 +52,24 @@
         settings:useAdminDisabledSummary="true"
         settings:controller="com.android.settings.connecteddevice.AddDevicePreferenceController"/>
 
+    <org.zeph.support.preference.SystemSettingListPreference
+        android:key="qs_bt_click_behavior"
+        android:title="@string/click_bluetooth_tile_behavior_title"
+        android:summary="%s"
+        android:entries="@array/click_bluetooth_qs_entries"
+        android:entryValues="@array/click_bluetooth_qs_values"
+        android:order="26"
+        android:defaultValue="0" />
+
+    <org.zeph.support.preference.SystemSettingListPreference
+        android:key="qs_bt_long_click_behavior"
+        android:title="@string/lclick_bluetooth_tile_behavior_title"
+        android:summary="%s"
+        android:entries="@array/lclick_bluetooth_qs_entries"
+        android:entryValues="@array/lclick_bluetooth_qs_values"
+        android:order="27"
+        android:defaultValue="0" />
+
     <ListPreference
         android:key="bluetooth_timeout"
         android:icon="@drawable/ic_bluetooth_disabled"
