--- a/res/values/zeph_arrays.xml
+++ b/res/values/zeph_arrays.xml
@@ -222,5 +222,28 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+    
+    <!-- Bluetooth QS Tile behavior -->
+    <string-array name="click_bluetooth_qs_entries" translatable="false">
+        <item>@string/b_bluetooth_tile</item>
+        <item>@string/modern_panel_bluetooth_tile</item>
+    </string-array>
+
+    <string-array name="click_bluetooth_qs_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string-array name="lclick_bluetooth_qs_entries" translatable="false">
+        <item>@string/bd_bluetooth_tile</item>
+        <item>@string/modern_panel_bluetooth_tile</item>
+        <item>@string/p_bluetooth_tile</item>
+    </string-array>
+
+    <string-array name="lclick_bluetooth_qs_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
 
