--- a/res/xml/security_dashboard_settings.xml
+++ b/res/xml/security_dashboard_settings.xml
@@ -62,6 +62,13 @@
             settings:keywords="@string/keywords_biometric_settings" />
     </PreferenceCategory>
 
+    <org.zeph.support.preference.SecureSettingSwitchPreference
+        android:order="20"
+        android:key="disable_secure_tiles_on_lockscreen"
+        android:title="@string/use_tiles_on_secure_keyguard_title"
+        android:summary="@string/use_tiles_on_secure_keyguard_summary"
+        android:defaultValue="true" />
+
     <Preference
         android:order="100"
         android:key="security_advanced_settings"
