--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -418,4 +418,7 @@
     <string name="charging_control_limit_title">Limit</string>
     
     <string name="reset">Reset</string>
+
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
 </resources>
