Settings: Add toggle for Smart 5G [2/2]
Change-Id: I72958e2313b48553ba82565ace8ebf5dd9e0cdf4

--- a/res/values/zeph_strings.xml
+++ b/res/values/zeph_strings.xml
@@ -332,4 +332,8 @@
     <!-- Alert Slider block -->
     <string name="block_alert_title">Block Alert slider</string>
     <string name="block_alert_summary">Pocket mode will block the Alert slider</string> 
+
+    <!-- Smart 5G -->
+    <string name="smart_5g_title">Smart 5G</string>
+    <string name="smart_5g_summary">Automatically switch between 5G and 4G to reduce battery consumption</string>
 </resources>
