--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -85,12 +85,12 @@
         android:key="lockscreen_media_art_options"
         android:title="@string/lockscreen_media_art_options_title" >
 
-        <org.proton.support.preference.SystemSettingSwitchPreference
+        <org.zeph.support.preference.SystemSettingSwitchPreference
             android:key="show_lockscreen_media_art"
             android:title="@string/show_lockscreen_media_art_title"
             android:defaultValue="true" />
 
-        <org.proton.support.preference.SystemSettingSeekBarPreference
+        <org.zeph.support.preference.SystemSettingSeekBarPreference
             android:key="lockscreen_media_blur"
             android:title="@string/lockscreen_media_blur_title"
             android:dependency="show_lockscreen_media_art"
