--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -259,6 +259,13 @@
         <org.zeph.support.preference.SwitchPreference
           android:key="call_connected_tones"
           android:title="@string/call_connected_tones_title" />
+          
+    <org.zeph.support.preference.GlobalSettingSwitchPreference
+        android:key="ringer_mute_speaker_media"
+        android:title="@string/ringer_mute_speaker_media_title"
+        android:summary="@string/ringer_mute_speaker_media_summary"
+        android:defaultValue="false"
+        android:order="-2"/>
 
     <!-- Pulse Visualizer -->
     <Preference
