--- a/res/layout/neoteric_logo.xml
+++ b/res/layout/neoteric_logo.xml
@@ -23,10 +23,9 @@
     android:selectable="false">
 
     <ImageView
-        android:layout_width="1250dp"
-        android:layout_height="200dp" 
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         android:src="@drawable/neoteric_logo"
-        android:adjustViewBounds="true"
         android:scaleType="centerInside"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp" />
